# account_manager

./: .env.example  .gitignore  CLAUDE.md  Job_logs.md  PLAN.md  README.md  TEST.md  account_manager.md  install.sh  pyproject.toml  sample.csv
accounts/: accounts.example.yaml  accounts.yaml
src/account_manager/: __init__.py  agent.py  main.py  memory.py  security.py  storage.py  tools.py  ui.py
